--- a/tools/azure-sdk-tools/packaging_tools/templates/multiapi_combiner/models_init.py.jinja2
+++ b/tools/azure-sdk-tools/packaging_tools/templates/multiapi_combiner/models_init.py.jinja2
@@ -7,8 +7,8 @@
 # --------------------------------------------------------------------------
 {% if code_model.models %}
 from ._models import (
-    {% for model in code_model.models %}
-    {{ model.name }},
+    {% for model in code_model.models.keys() %}
+    {{ model }},
     {% endfor %}
 )
 {% endif %}
@@ -26,8 +26,8 @@ from ._patch import *  # pylint: disable=unused-wildcard-import
 from ._patch import patch_sdk as _patch_sdk
 
 __all__ = [
-{% for model in code_model.models %}
-    "{{ model.name }}",
+{% for model in code_model.models.keys() %}
+    "{{ model }}",
 {% endfor %}
 {% for enum in code_model.enums %}
     "{{ enum.name }}",
